[LO extension] ai support first step

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -198,6 +198,13 @@ guiUseServerSettings = Use server settings
 guiUsePremiumAccount = Use premium account (for premium user)
 guiPremiumUsername =  User name:
 guiPremiumApiKey =  API Key:
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiOverrideParagraph = Override paragraph with result of AI  
 guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
 guiLongSentencesText = Maximum sentences length (5 - 100 words):
 guiLongParagraphsText = Maximum paragraphs length (5 - {0} words):
