--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -201,6 +201,13 @@ guiLongSentencesText = Maximum sentences length (5 - 100 words):
 guiPremiumUsername = User name:
 guiLongParagraphsText = Maximum paragraphs length (5 - {0} words):
 guiPremiumApiKey = API Key:
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiOverrideParagraph = Override paragraph with result of AI  
 guiUnderlineColor = Underline Color of Category
 guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
 guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
