--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -53,7 +53,7 @@ desc_repetition_beginning_word = Tres frases successives comencen amb la mateixa
 desc_repetition_beginning_adv = Dues frases consecutives comencen amb el mateix element.
 desc_repetition_beginning_thesaurus = Considereu reescriure la frase o usar un sin\u00f2nim.
 desc_unpaired_brackets = Claus, cometes, par\u00e8ntesis i s\u00edmbols semblants desaparellats
-desc_unpaired_quotes = Unpaired quotation marks
+desc_unpaired_quotes = Cometes desparellades
 desc_uppercase_sentence = Comproveu que la frase comen\u00e7a amb maj\u00fascula
 desc_whitespacerepetition = Repetici\u00f3 d'espais en blanc (formataci\u00f3 incorrecta)
 desc_spelling = Possible error ortogr\u00e0fic
@@ -132,7 +132,7 @@ guiOOoCheckAllButton = Tot
 guiOOoCheckSpellingButton = Sols ortografia
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Sols gram\u00e0tica
-guiOOoCheckOnlyRuleButton = Only Rule
+guiOOoCheckOnlyRuleButton = Sols la regla
 guiTurnOffRule = Inhabilita la regla
 guiOOoOptionsButton = Opcions...
 guiOOoCheckDialogName = Di\u00e0leg de revisi\u00f3 ortogr\u00e0fica i gramatical
@@ -182,13 +182,13 @@ guiTextChangeLabel = Despr\u00e9s d'un canvi de text:
 guiSentenceExceedingRules = Regles de frase que superen:
 guiTechnicalSettings = Par\u00e0metres t\u00e8cnics:
 guiCheckFullTextAtFirst = Revisa el text complet despr\u00e9s de carregar un document
-guiUseLtSpellChecker = Use LanguageTool spell checker
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
+guiUseLtSpellChecker = Usa el corrector ortogr\u00e0fic de LanguageTool
+guiSpellCheckerWarning = Espai de pila massa petit: el corrector ortogr\u00e0fic de LanguageTool no s'usa.\nEstabliu l'espai de pila com a m\u00ednim a 1024 MB per a usar el corrector ortogr\u00e0fic de LanguageTool
 guiNoSynonymsAsSuggestions = No facis servir sin\u00f2nims com a suggeriments (m\u00e9s r\u00e0pid, sols afecta poques regles)
-guiIncludeTrackedChanges = Include tracked changes
-guiActivateTempOffRules = Enable temporarily disabled rules
-guiEnableGoalSpecificRules = Enable goal specific rules
-guiFilterOverlappingMatches = Filter overlapping matches
+guiIncludeTrackedChanges = Inclou canvis de seguiment
+guiActivateTempOffRules = Activa regles desactivades temporalment
+guiEnableGoalSpecificRules = Activa regles d'objectius espec\u00edfics
+guiFilterOverlappingMatches = Filtra errors que s'encavalquen
 guiSaveCacheToFile = Desa la mem\u00f2ria cau en fitxer
 guiUseRemoteServer = Utilitza un servidor remot per a revisar el text
 guiUseServer = Usa el servidor:
@@ -200,7 +200,7 @@ guiStyleRepeatedWordText = M\u00e0xima dist\u00e0ncia entre dues paraules repeti
 guiUsePremiumAccount = Usa un compte pr\u00e8mium (per a usuari pr\u00e8mium)
 guiLongSentencesText = Mida m\u00e0xima de les frases (5 - 100 paraules):
 guiPremiumUsername = Nom d'usuari:
-guiLongParagraphsText = Mida m\u00e0xima dels par\u00e0grafs (5 - 200 paraules):
+guiLongParagraphsText = Mida m\u00e0xima dels par\u00e0grafs (5 - {0} paraules):
 guiPremiumApiKey = Clau API:
 guiUnderlineColor = Color de subratllat de la categoria
 guiUColorHint = Els colors de subratllat s\u00f3n admesos en LibreOffice versi\u00f3 6.2.0 o superior
@@ -369,8 +369,8 @@ loMenuRemoteInfo = Suggeriment de revisi\u00f3 remota
 loMenuResetIgnorePermanent = Reinicialitza "Ignora de manera permanent"
 loMenuEnableBackgroundCheck = Activa revisi\u00f3 en segon pla
 loMenuDisableBackgroundCheck = Desactiva revisi\u00f3 en segon pla
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
+loMenuGrammarCheckAgain = Torna a revisar el document
+loMenuNextError = Error ortogr\u00e0fic o gramatical seg\u00fcent
 loMenuChangeProfiles = Canvia el perfil a
 loContextMenuRenewMarkups = Renova marques de gram\u00e0tica
 loContextMenuOptions = Opcions de LanguageTool
@@ -395,7 +395,7 @@ loDialogMoreButtonHelp = Sols per a errors gramaticals:\nObre un enlla\u00e7 en 
 loDialogIgnoreButtonHelp = Ignora la coincid\u00e8ncia actual\n(S'ignora la coincid\u00e8ncia fins al seg\u00fcent canvi de par\u00e0graf).
 loDialogIgnoreAllButtonHelp = Ignora totes les coincid\u00e8ncies similars en el document:\n- Per a errors ortogr\u00e0fics: ignora totes les paraules com la que est\u00e0 mal escrita\n- Per a errors gramaticals: Ignora la regla\nLes paraules o les regles s'ignoren fins al final de la sessi\u00f3.
 loDialogIgnorePermanentButtonHelp = Ignora l'error trobat actual \n L'error tamb\u00e9 s'ignora en reobrir el document \n fins que es fa clic en Reinicialitza "Ignora de manera permanent".
-loDialogResetIgnorePermanentButtonHelp = Els errors ignorats de manera permanent es reinicialitzaran
+loDialogResetIgnorePermanentButtonHelp = Els errors ignorats de manera permanent es reinicialitzaran.
 loDialogDeactivateRuleButtonHelp = Sols per a errors gramaticals:\nLa regla est\u00e0 desactivada permanentment\n(Es pot activar de nou mitjan\u00e7ant el di\u00e0leg d'opcions LT).
 loDialogActivateRuleButtonHelp = Reactiva regles desactivades.
 loDialogAddToDictionaryButtonHelp = Sols per a errors ortogr\u00e0fics:\nTrieu un diccionari de la llista.\nLa paraula desconeguda s'afegeix al diccionari triat.
@@ -404,13 +404,13 @@ loDialogChangeAllButtonHelp = Sols per a errors ortogr\u00e0fics:\nCanvia totes 
 loDialogAutoCorrectButtonHelp = Canvia totes les paraules mal escrites en el document al suggeriment triat. \nAfegeix un suggeriment a la correcci\u00f3 autom\u00e0tica.
 loDialogHelpText = El di\u00e0leg de verificaci\u00f3 ortogr\u00e0fica i gramatical usa la revisi\u00f3 ortogr\u00e0fica del LibreOffice/OpenOffice i la comprovaci\u00f3 gramatical i d'estil de LanguageTool.\nPer a obtenir ajuda per a elements individuals del di\u00e0leg, moveu el cursor del ratol\u00ed sobre l'element en q\u00fcesti\u00f3.
 loDialogErrorCloseMessage = Hi ha hagut un error intern.\u00a0\nEl di\u00e0leg de revisi\u00f3 ortogr\u00e0fica i gramatical de LT es tancar\u00e0. \nProveu una altra vegada. 
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
+loDialogCacheLabel = Estatus de la mem\u00f2ria cau
+loDialogDoNotCheck = No comprovis 
 loCheckStatusInitialization = Inicialitzaci\u00f3
 loCheckStatusCheck = Revisa
 loLabelCheckProgress = Text revisat:
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
+loBusyMessage = LibreOffice est\u00e0 ocupat.  \nProveu m\u00e9s tard.
+loWaitMessage = Iniciant el di\u00e0leg.  \nEspereu.
 loExtHeapMessage = S'ha arribat al l\u00edmit de mem\u00f2ria de LanguageTool. S'est\u00e0 canviant al mode de par\u00e0graf. Algunes normes de nivell de text no funcionaran correctament.
 loExtSwitchOffMessage = LanguageTool est\u00e0 apagat. Activeu-lo per a executar aquesta funci\u00f3.
 loDialogUnsupported = La revisi\u00f3 gramatical no admet objectes afegits com ara gr\u00e0fics, imatges o objectes de text.  \nSitueu el cursor en el text i comenceu el di\u00e0leg una altra vegada.
@@ -420,18 +420,18 @@ loAboutLtDesc = El vostre assistent d'escriptura
 loCopyToClipBoardDesc = Copia al porta-retalls
 loOpenLogFolderDesc = Obre el directori de log
 loVersionInformation = Dades de la versi\u00f3
-loStatisticalAnalysis = Statistical Analysis
-loStatisticalAnalysisCloseButton = Close
-loStatisticalAnalysisDefaultButton = Default
-loStatisticalAnalysisSetButton = Set
-loStatisticalAnalysisWithoutDirectSpreech = Without direct speech
-loStatisticalAnalysisChapterLabel = Chapter
-loStatisticalAnalysisSubchapterLabel = Subchapter
-loStatisticalAnalysisMostUsedWords = Most used words
-loStatisticalAnalysisOptionsLabel = Options
-loStatisticalAnalysisLevels = Levels
-loStatisticalAnalysisIgnoreWordButton = Ignore word
-loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
-loStatisticalAnalysisEntireDocument = Entire document
-loStatisticalAnalysisNotAnalyzed = Not analyzed
-loStatisticalAnalysisNumber = Number
+loStatisticalAnalysis = An\u00e0lisi estad\u00edstica
+loStatisticalAnalysisCloseButton = Tanca
+loStatisticalAnalysisDefaultButton = Per defecte
+loStatisticalAnalysisSetButton = Estableix
+loStatisticalAnalysisWithoutDirectSpreech = Sense estil directe
+loStatisticalAnalysisChapterLabel = Cap\u00edtol
+loStatisticalAnalysisSubchapterLabel = Subcap\u00edtol
+loStatisticalAnalysisMostUsedWords = Paraules m\u00e9s usades
+loStatisticalAnalysisOptionsLabel = Opcions
+loStatisticalAnalysisLevels = Nivells
+loStatisticalAnalysisIgnoreWordButton = Ignora la paraula
+loStatisticalAnalysisResetIgnoredWordsButton = Restableix paraules ignorades
+loStatisticalAnalysisEntireDocument = Document complet
+loStatisticalAnalysisNotAnalyzed = No analitzat
+loStatisticalAnalysisNumber = Nombre
