--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -188,7 +188,7 @@ guiNoSynonymsAsSuggestions = Synonyme nicht als Vorschl\u00e4ge nutzen (schnelle
 guiIncludeTrackedChanges = Verfolgte \u00c4nderungen einschlie\u00dfen
 guiActivateTempOffRules = Vor\u00fcbergehend deaktivierte Regeln einschalten
 guiEnableGoalSpecificRules = Zielspezifische Regeln einschalten
-guiFilterOverlappingMatches = Filter overlapping matches
+guiFilterOverlappingMatches = \u00dcberlappende Treffer filtern
 guiSaveCacheToFile = In Datei zwischenspeichern
 guiUseRemoteServer = Externen Server zur Textpr\u00fcfung nutzen
 guiUseServer = Server nutzen:
