--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -200,7 +200,7 @@ guiStyleRepeatedWordText = Distance maximale entre deux mots r\u00e9p\u00e9t\u00
 guiUsePremiumAccount = Utiliser le compte Premium (pour les utilisateurs Premium)
 guiLongSentencesText = Longueur maximum de phrase (5 - 100 mots) :
 guiPremiumUsername = Nom d\u2019utilisateur :
-guiLongParagraphsText = Longueur maximum de paragraphe (5 - 200 mots) :
+guiLongParagraphsText = Longueur maximum de paragraphe (5 - {0} mots) :
 guiPremiumApiKey = Cl\u00e9 API :
 guiUnderlineColor = Souligne la couleur de la cat\u00e9gorie
 guiUColorHint = Le soulignage en couleur est disponible sur la version 6.2.0 et celles plus r\u00e9centes de LibreOffice
