[LO extension] AI support first step

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -208,7 +208,21 @@ guiAiUrl = AI Server URL
 guiAiModel = AI Model
 guiAiApiKey = AI API Key
 guiAiAutoCorrect = Enable automatic Error detection
-guiAiOverrideParagraph = Override paragraph with result of AI  
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+loMenuAiSupport = AI Support
+loMenuAiAddErrorMarks = Add from AI detected errors
+loMenuAiCorrectErrors = Correct errors in the paragraph
+loMenuAiBetterStyle = Improve the style of the paragraph
+loMenuAiExpandText = Expand the text of the paragraph
+loMenuAiGeneralCommand = Execute general command for paragraph
+loMenuAiGeneralCommandTitle = Command input
+loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
+loAiWaitDialogTitle = Please Wait
+loAiWaitDialogMessage = Please wait until the AI has completed your request.\nThis may take some time depending on the workload.
+loAiRuleDescription = AI error detection
+loAiRuleMessage = The AI suggests the following correction
 guiUnderlineColor = Underline Color of Category
 guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
 guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
