--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -212,17 +212,28 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 loMenuAiSupport = AI Support
-loMenuAiAddErrorMarks = Add from AI detected errors
-loMenuAiCorrectErrors = Correct errors in the paragraph
-loMenuAiBetterStyle = Improve the style of the paragraph
-loMenuAiExpandText = Expand the text of the paragraph
-loMenuAiGeneralCommand = Execute general command for paragraph
+loMenuAiAddErrorMarks = AI: add detected errors
+loMenuAiGeneralCommand = AI: General paragraph changes
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
 loAiWaitDialogTitle = Please Wait
 loAiWaitDialogMessage = Please wait until the AI has completed your request.\nThis may take some time depending on the workload.
 loAiRuleDescription = AI error detection
 loAiRuleMessage = The AI suggests the following correction
+loAiDialogTitle = LT AI Dialog
+loAiDialogInstructionLabel = Instruction
+loAiDialogParagraphLabel = Text to be edited
+loAiDialogResultLabel = AI generated text
+loAiDialogExecuteButton = Execute instruction
+loAiDialogcopyResultButton = Copy Result
+loAiDialogResetButton = Reset
+loAiDialogClearButton = Delete text
+loAiDialogUndoButton = Undo
+loAiDialogOverrideButton = override Paragraph
+loAiDialogaddToButton = add to Paragraph
+loAiDialogHelpButton = Help
+loAiDialogCloseButton = Close
+loAiCorrectInstruction = Output the grammatically and orthographically corrected text
 guiUnderlineColor = Underline Color of Category
 guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
 guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
